# race-lens

./: .gitignore  CODEX_FRONTEND_PLAN.md  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/fixtures/: monaco_2024_race.track.json  spain_2024_race.jsonl  spain_2024_race.positions.json  spain_2024_race.track.json
backend/racelens/: api.py  cli.py
backend/racelens/adapters/: _common.py  fastf1_adapter.py  openf1_adapter.py
backend/racelens/commentary/: feed.py  renderer.py
backend/racelens/events/: models.py
backend/racelens/insights/: battles.py  clean_air.py  degradation.py  drs_train.py  pit_window.py  registry.py  traffic.py  undercut.py
backend/racelens/live/: __init__.py  runner.py
backend/racelens/replay/: engine.py
backend/tests/: test_api.py  test_battles.py  test_clean_air.py  test_commentary.py  test_degradation.py  test_drs_train.py  test_feed.py  test_insights.py  test_live_runner.py  test_openf1_adapter.py  test_pit_window.py  test_replay.py  test_snapshots.py  test_status_mapping.py  test_undercut.py
design-sketches/: a-broadcast.html  a2-broadcast.html  b-pitwall.html
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/public/fixtures/: monaco_2024_race.jsonl
frontend/src/: main.tsx  replay.ts  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/features/replay/: RaceFeed.tsx  (+15 more)
frontend/src/lib/: deadReckoning.ts  format.ts  liveGaps.ts  trackGeometry.ts
rust/race-core/: Cargo.toml
rust/race-core/src/: main.rs
